--- a/reels.html
+++ b/reels.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- 
+
 
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -19,48 +19,46 @@ justify-content: center;
 align-items: center;
 }
 .layout-wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  max-width: 1600px;
-  min-height: 100vh;
+display: flex;
+justify-content: center;
+align-items: center;
+width: 100%;
+max-width: 1600px;
+height: 100vh;
 }
-
 #live-stats {
-  flex-shrink: 0;
-  width: 180px;
-  margin-right: 20px;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  padding: 10px;
-  background-color: #1a1a1a;
-  border-radius: 12px;
-  box-shadow: 0 0 10px rgba(0,0,0,0.5);
-  font-size: 0.85rem;
-  line-height: 1.6;
-  position: sticky;
-  top: 20px;
-  height: fit-content;
+flex-shrink: 0;
+width: 180px;
+margin-right: 20px;
+display: flex;
+flex-direction: column;
+justify-content: flex-start;
+padding: 10px;
+background-color: #1a1a1a;
+border-radius: 12px;
+box-shadow: 0 0 10px rgba(0,0,0,0.5);
+font-size: 0.85rem;
+line-height: 1.6;
+position: sticky;
+top: 20px;
+height: fit-content;
 }
 #app-frame {
-  width: 100%;
-  background-color: #0f0f0f;
-  border-radius: 0;
-  display: flex;
-  flex-direction: column;
-  overflow: visible;
-  min-height: calc(100vh - 80px); /* subtract bottom nav height */
+width: min(645px, 95vw);
+height: 100vh;
+background-color: #0f0f0f;
+border-radius: 20px;
+box-shadow: 0 0 15px rgba(0,0,0,0.3);
+overflow: hidden;
+display: flex;
+flex-direction: column;
+position: relative;
 }
 .content-wrapper {
-  padding-top: 0;
-  padding-bottom: 80px;
-  flex: 1;
-  overflow-y: auto;
-  scroll-snap-type: y mandatory;
+flex: 1;
+overflow-y: auto;
+scroll-snap-type: y mandatory;
 }
-
 .content-wrapper::-webkit-scrollbar {
 width: 8px;
 }
@@ -125,14 +123,14 @@ text-shadow: 0 0 6px #000;
 max-width: 80%;
 }
 .user-info {
-  transition: transform 0.3s ease;
-  display: flex;
-  align-items: center;
-  position: absolute;
-  bottom: 80px;
-  left: 10px;
-  text-decoration: none;
-  color: inherit;
+transition: transform 0.3s ease;
+display: flex;
+align-items: center;
+position: absolute;
+bottom: 80px;
+left: 10px;
+text-decoration: none;
+color: inherit;
 }
 
 .user-info img {
@@ -209,117 +207,48 @@ z-index: 2;
 20% { opacity: 1; }
 100% { opacity: 0; transform: translateX(-50%) translateY(-20px); }
 }
-@media (max-width: 768px) {
-  html, body {
-    height: auto;
-    overflow-y: auto;
-  }
-
-  .layout-wrapper {
-    flex-direction: column;
-    align-items: center;
-    margin: 0;
-    min-height: 100vh;
-  }
-
-  #live-stats {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    width: 100%;
-    margin: 0;
-    padding: 10px 6px;
-    background-color: #1a1a1a;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(5, auto);
-    gap: 4px;
-    font-size: 0.75rem;
-    text-align: center;
-    border-radius: 0;
-    z-index: 1000;
-    transform: translateY(0);
-    transition: transform 0.3s ease-in-out;
-  }
-
-  #app-frame {
-    width: 100%;
-    background-color: #0f0f0f;
-    border-radius: 0;
-    display: flex;
-    flex-direction: column;
-    overflow: visible;
-    min-height: calc(100vh - 80px);
-  }
-
-  .content-wrapper {
-    padding-top: 0;
-    padding-bottom: 80px;
-    flex: 1;
-    overflow-y: auto;
-    scroll-snap-type: y mandatory;
-  }
-
-  .bottom-nav {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    background-color: #1a1a1a;
-    border-top: 1px solid #333;
-    display: flex;
-    justify-content: space-around;
-    padding: 0.5rem 0;
-    border-bottom-left-radius: 0;
-    border-bottom-right-radius: 0;
-    z-index: 1000;
-  }
-}
-
-
 </style>
-  <script src="https://unpkg.com/lucide@latest"></script>
+<script src="https://unpkg.com/lucide@latest"></script>
 
 </head>
 <body>
+<div class="layout-wrapper">
 <div id="live-stats">
-  <div>Minutes Wasted: <span id="stat-minutes">0</span></div>
-  <div>Scrolls Done: <span id="stat-scrolls">0</span></div>
-  <div>Likes Given: <span id="stat-likes">0</span></div>
-  <div>Comments Given: <span id="stat-comments">0</span></div>
-  <div>Reposts Done: <span id="stat-reposts">0</span></div>
-  <div>Bookmarks: <span id="stat-bookmarks">0</span></div>
-  <div>Reels Viewed: <span id="stat-reels">0</span></div>
-  <div>Stories Viewed: <span id="stat-stories">0</span></div>
-  <div>Posts Posted: <span id="stat-posts">0</span></div>
-  <div>Profiles Visited: <span id="stat-profiles">0</span></div>
+<div>Minutes Wasted: <span id="stat-minutes">0</span></div>
+<div>Scrolls Done: <span id="stat-scrolls">0</span></div>
+<div>Likes Given: <span id="stat-likes">0</span></div>
+<div>Comments Given: <span id="stat-comments">0</span></div>
+<div>Reposts Done: <span id="stat-reposts">0</span></div>
+<div>Bookmarks: <span id="stat-bookmarks">0</span></div>
+<div>Reels Viewed: <span id="stat-reels">0</span></div>
+<div>Stories Viewed: <span id="stat-stories">0</span></div>
+<div>Posts Posted: <span id="stat-posts">0</span></div>
+<div>Profiles Visited: <span id="stat-profiles">0</span></div>
 </div>
- 
- <div class="layout-wrapper">
+
+
 <div id="app-frame">
- <div style="height: 130px;"></div>
 <div class="content-wrapper" id="reelWrapper">
 </div> <!-- closes .content-wrapper -->
 
 <div class="bottom-nav">
-  <a href="index.html"><i data-lucide="home"></i></a>
-  <a href="search.html"><i data-lucide="search"></i></a>
-  <a href="publish.html"><i data-lucide="plus-circle"></i></a>
-  <a href="reels.html"><i data-lucide="video"></i></a>
-  <a href="profile.html"><i data-lucide="user"></i></a>
+<a href="index.html"><i data-lucide="home"></i></a>
+<a href="search.html"><i data-lucide="search"></i></a>
+<a href="publish.html"><i data-lucide="plus-circle"></i></a>
+<a href="reels.html"><i data-lucide="video"></i></a>
+<a href="profile.html"><i data-lucide="user"></i></a>
 </div>
 
 
 <script>
 const usernames = ["void_vibes", "scroller3000", "ghostfeed", "lostinloop", "tapmaster", "doomposter"];
 const captions = [
-  "You're watching nothing.",
-  "Keep staring... it's not real.",
-  "Every frame is the same.",
-  "This video changed nothing.",
-  "Still scrolling?",
-  "Now in 4K: pure void."
+"You're watching nothing.",
+"Keep staring... it's not real.",
+"Every frame is the same.",
+"This video changed nothing.",
+"Still scrolling?",
+"Now in 4K: pure void."
 ];
 
 let reelCount = parseInt(localStorage.getItem("reelsViewed")) || 0;
@@ -336,51 +265,64 @@ let time = parseInt(localStorage.getItem("secondsWasted")) || 0;
 const viewedReels = new Set();
 
 function updateStats() {
-  document.getElementById("stat-reels").textContent = reelCount;
-  document.getElementById("stat-scrolls").textContent = scrollCount;
-  document.getElementById("stat-likes").textContent = likes;
-  document.getElementById("stat-comments").textContent = comments;
-  document.getElementById("stat-reposts").textContent = reposts;
-  document.getElementById("stat-bookmarks").textContent = bookmarks;
-  document.getElementById("stat-profiles").textContent = profiles;
-  document.getElementById("stat-posts").textContent = posts;
-  document.getElementById("stat-stories").textContent = stories;
-  document.getElementById("stat-minutes").textContent = Math.floor(time / 60);
+document.getElementById("stat-reels").textContent = reelCount;
+document.getElementById("stat-scrolls").textContent = scrollCount;
+document.getElementById("stat-likes").textContent = likes;
+document.getElementById("stat-comments").textContent = comments;
+document.getElementById("stat-reposts").textContent = reposts;
+document.getElementById("stat-bookmarks").textContent = bookmarks;
+document.getElementById("stat-profiles").textContent = profiles;
+document.getElementById("stat-posts").textContent = posts;
+document.getElementById("stat-stories").textContent = stories;
+document.getElementById("stat-minutes").textContent = Math.floor(time / 60);
 }
 
 setInterval(() => {
-  time++;
-  localStorage.setItem("secondsWasted", time);
-  updateStats();
+time++;
+localStorage.setItem("secondsWasted", time);
+updateStats();
 }, 1000);
 
 function createReel(username, caption) {
-  const avatar = `https://api.dicebear.com/7.x/personas/svg?seed=${username}`;
-  const reel = document.createElement("div");
-  reel.className = "reel";
+const avatar = `https://api.dicebear.com/7.x/personas/svg?seed=${username}`;
+const reel = document.createElement("div");
+reel.className = "reel";
 
-  const inner = document.createElement("div");
-  inner.className = "reel-inner";
-  inner.innerHTML = `
-    <div class="caption-center">${caption}</div>
+const inner = document.createElement("div");
+inner.className = "reel-inner";
+inner.innerHTML = `
+   <div class="caption-center">${caption}</div>
+   <a href="user.html?user=${username}" class="user-info" style="text-decoration: none; color: inherit; display: flex; align-items: center;">
+  <img src="${avatar}" alt="avatar" style="width: 40px; height: 40px; border-radius: 50%; margin-right: 10px; border: 2px solid #f44;">
+  <div class="username">@${username}</div>
+</a>
     <a href="user.html?user=${username}" class="user-info" style="text-decoration: none; color: inherit;">
       <img src="${avatar}" alt="avatar">
       <div class="username">@${username}</div>
     </a>
-    <div class="actions">
+   <div class="actions">
+
+  <button onclick="handleLike(this)"><i data-lucide="heart"></i></button>
+  <button onclick="toggleCommentBox(this)"><i data-lucide="message-circle"></i></button>
+  <button onclick="handleRepost(this)"><i data-lucide="repeat"></i></button>
+  <button onclick="handleBookmark(this)"><i data-lucide="bookmark"></i></button>
+</div>
+
       <button class="like-btn"><i data-lucide="heart"></i></button>
       <button class="comment-toggle"><i data-lucide="message-circle"></i></button>
       <button class="repost-btn"><i data-lucide="repeat"></i></button>
       <button class="bookmark-btn"><i data-lucide="bookmark"></i></button>
     </div>
-    <div class="comment-box">
-      <input type="text" placeholder="Say something...">
+   <div class="comment-box">
+     <input type="text" placeholder="Say something...">
+      <button onclick="submitFakeComment(this)">➤</button>
+    </div>`;
       <button class="submit-comment">➤</button>
     </div>
   `;
 
-  reel.appendChild(inner);
-  document.getElementById("reelWrapper").appendChild(reel);
+reel.appendChild(inner);
+document.getElementById("reelWrapper").appendChild(reel);
 
   // Attach event listeners to each reel action
   inner.querySelector(".like-btn").onclick = () => handleLike(inner.querySelector(".like-btn"));
@@ -395,126 +337,126 @@ function createReel(username, caption) {
 
 
 function handleLike(btn) {
-  likes++;
-  localStorage.setItem("likesGiven", likes);
-  updateStats();
-  showPopup(btn, "This like did nothing.");
+likes++;
+localStorage.setItem("likesGiven", likes);
+updateStats();
+showPopup(btn, "This like did nothing.");
 }
 
 function handleRepost(btn) {
-  reposts++;
-  localStorage.setItem("repostsDone", reposts);
-  updateStats();
-  showPopup(btn, "Echoed into the abyss.");
+reposts++;
+localStorage.setItem("repostsDone", reposts);
+updateStats();
+showPopup(btn, "Echoed into the abyss.");
 }
 
 function handleBookmark(btn) {
-  bookmarks++;
-  localStorage.setItem("postsBookmarked", bookmarks);
-  updateStats();
-  showPopup(btn, "📌 Marked meaningless.");
+bookmarks++;
+localStorage.setItem("postsBookmarked", bookmarks);
+updateStats();
+showPopup(btn, "📌 Marked meaningless.");
 }
 
 function showPopup(btn, message) {
-  const popup = document.createElement("div");
-  popup.className = "popup";
-  popup.textContent = message;
-  btn.closest(".reel-inner").appendChild(popup);
-  setTimeout(() => popup.remove(), 2500);
+const popup = document.createElement("div");
+popup.className = "popup";
+popup.textContent = message;
+btn.closest(".reel-inner").appendChild(popup);
+setTimeout(() => popup.remove(), 2500);
 }
 
 function toggleCommentBox(btn) {
-  const inner = btn.closest(".reel-inner");
-  const box = inner.querySelector(".comment-box");
-  const userInfo = inner.querySelector(".user-info");
-  const actions = inner.querySelector(".actions");
-  const isOpen = box.style.display === "flex";
-  box.style.display = isOpen ? "none" : "flex";
-  userInfo.style.transform = isOpen ? "translateY(0)" : "translateY(-30px)";
-  actions.style.transform = isOpen ? "translateY(0)" : "translateY(-30px)";
+const inner = btn.closest(".reel-inner");
+const box = inner.querySelector(".comment-box");
+const userInfo = inner.querySelector(".user-info");
+const actions = inner.querySelector(".actions");
+const isOpen = box.style.display === "flex";
+box.style.display = isOpen ? "none" : "flex";
+userInfo.style.transform = isOpen ? "translateY(0)" : "translateY(-30px)";
+actions.style.transform = isOpen ? "translateY(0)" : "translateY(-30px)";
 }
 
 function submitFakeComment(button) {
-  const input = button.previousElementSibling;
-  if (input.value.trim() !== "") {
-    comments++;
-    localStorage.setItem("commentsGiven", comments);
-    updateStats();
-    input.style.transition = "opacity 0.5s ease";
-    input.style.opacity = 0;
+const input = button.previousElementSibling;
+if (input.value.trim() !== "") {
+comments++;
+localStorage.setItem("commentsGiven", comments);
+updateStats();
+input.style.transition = "opacity 0.5s ease";
+input.style.opacity = 0;
 
-    setTimeout(() => {
-      input.value = "";
-      input.style.opacity = 1;
-      input.closest(".comment-box").style.display = "none";
+setTimeout(() => {
+input.value = "";
+input.style.opacity = 1;
+input.closest(".comment-box").style.display = "none";
 
-      // ⬇️ Reset user-info and actions position after comment box closes
-      const inner = input.closest(".reel-inner");
-      inner.querySelector(".user-info").style.transform = "translateY(0)";
-      inner.querySelector(".actions").style.transform = "translateY(0)";
-    }, 600);
-  }
+// ⬇️ Reset user-info and actions position after comment box closes
+const inner = input.closest(".reel-inner");
+inner.querySelector(".user-info").style.transform = "translateY(0)";
+inner.querySelector(".actions").style.transform = "translateY(0)";
+}, 600);
+}
 }
 
 
 function loadInitialReels(count = 10) {
-  for (let i = 0; i < count; i++) {
-    const user = usernames[Math.floor(Math.random() * usernames.length)];
-    const cap = captions[Math.floor(Math.random() * captions.length)];
-    createReel(user, cap);
-  }
+for (let i = 0; i < count; i++) {
+const user = usernames[Math.floor(Math.random() * usernames.length)];
+const cap = captions[Math.floor(Math.random() * captions.length)];
+createReel(user, cap);
+}
 }
 
 function trackVisibleReels() {
-  const allReels = document.querySelectorAll(".reel");
-  allReels.forEach((reel) => {
-    const rect = reel.getBoundingClientRect();
-    const isInView = rect.top >= 0 && rect.bottom <= window.innerHeight + 1;
-    if (isInView && !viewedReels.has(reel)) {
-      viewedReels.add(reel);
-      reelCount++;
-      localStorage.setItem("reelsViewed", reelCount);
-      updateStats();
-    }
-  });
+const allReels = document.querySelectorAll(".reel");
+allReels.forEach((reel) => {
+const rect = reel.getBoundingClientRect();
+const isInView = rect.top >= 0 && rect.bottom <= window.innerHeight + 1;
+if (isInView && !viewedReels.has(reel)) {
+viewedReels.add(reel);
+reelCount++;
+localStorage.setItem("reelsViewed", reelCount);
+updateStats();
+}
+});
 }
 
 const reelWrapper = document.getElementById("reelWrapper");
 let scrollCooldown = false;
 
 reelWrapper.addEventListener("scroll", () => {
-  if (!scrollCooldown) {
-    scrollCount++;
-    localStorage.setItem("scrollCount", scrollCount);
-    updateStats();
+if (!scrollCooldown) {
+scrollCount++;
+localStorage.setItem("scrollCount", scrollCount);
+updateStats();
 
-    scrollCooldown = true;
-    setTimeout(() => {
-      scrollCooldown = false;
-    }, 500); // Cooldown between scroll counts
-  }
+scrollCooldown = true;
+setTimeout(() => {
+scrollCooldown = false;
+}, 500); // Cooldown between scroll counts
+}
 
-  trackVisibleReels();
+trackVisibleReels();
 
-  if (reelWrapper.scrollTop + reelWrapper.clientHeight >= reelWrapper.scrollHeight - 10) {
-    loadInitialReels(5);
-  }
+if (reelWrapper.scrollTop + reelWrapper.clientHeight >= reelWrapper.scrollHeight - 10) {
+loadInitialReels(5);
+}
 });
 document.addEventListener("click", function (e) {
-  const anchor = e.target.closest("a[href^='user.html?user=']");
-  if (anchor) {
-    let visited = parseInt(localStorage.getItem("profilesVisited")) || 0;
-    localStorage.setItem("profilesVisited", visited + 1);
+const anchor = e.target.closest("a[href^='user.html?user=']");
+if (anchor) {
+let visited = parseInt(localStorage.getItem("profilesVisited")) || 0;
+localStorage.setItem("profilesVisited", visited + 1);
 
-    const statEl = document.getElementById("stat-profiles");
-    if (statEl) statEl.textContent = visited + 1;
-  }
+const statEl = document.getElementById("stat-profiles");
+if (statEl) statEl.textContent = visited + 1;
+}
 });
 
 updateStats();
 loadInitialReels();
 trackVisibleReels();
-  lucide.createIcons();
+lucide.createIcons();
 
 </script>
 
