--- a/reels.html
+++ b/reels.html
@@ -207,12 +207,76 @@ z-index: 2;
 20% { opacity: 1; }
 100% { opacity: 0; transform: translateX(-50%) translateY(-20px); }
 }
+   @media (max-width: 768px) {
+  html, body {
+    height: auto;
+    overflow-y: auto;
+  }
+
+  .layout-wrapper {
+    flex-direction: column;
+    align-items: center;
+    margin: 0;
+    min-height: 100vh;
+  }
+
+  #live-stats {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    padding: 10px 6px;
+    background-color: #1a1a1a;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(5, auto);
+    gap: 4px;
+    font-size: 0.75rem;
+    text-align: center;
+    border-radius: 0;
+    z-index: 1000;
+  }
+
+  #app-frame {
+    width: 100%;
+    background-color: #0f0f0f;
+    border-radius: 0;
+    display: flex;
+    flex-direction: column;
+    overflow: visible;
+    min-height: calc(100vh - 80px);
+  }
+
+  .content-wrapper {
+    padding-top: 0;
+    padding-bottom: 80px;
+    flex: 1;
+    overflow-y: auto;
+    scroll-snap-type: y mandatory;
+  }
+
+  .bottom-nav {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: #1a1a1a;
+    border-top: 1px solid #333;
+    display: flex;
+    justify-content: space-around;
+    padding: 0.5rem 0;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+    z-index: 1000;
+  }
+}
+
 </style>
 <script src="https://unpkg.com/lucide@latest"></script>
 
 </head>
 <body>
-<div class="layout-wrapper">
 <div id="live-stats">
 <div>Minutes Wasted: <span id="stat-minutes">0</span></div>
 <div>Scrolls Done: <span id="stat-scrolls">0</span></div>
@@ -226,7 +290,8 @@ z-index: 2;
 <div>Profiles Visited: <span id="stat-profiles">0</span></div>
 </div>
 
-
+<div class="layout-wrapper">
+   <div style="height: 130px;"></div>
 <div id="app-frame">
 <div class="content-wrapper" id="reelWrapper">
 </div> <!-- closes .content-wrapper -->
