--- a/reels.html
+++ b/reels.html
@@ -91,14 +91,15 @@ font-size: 1.3rem;
 
 /* REELS UI — now flush with content box */
 .reel {
-scroll-snap-align: start;
-min-height: 100vh;
-background-color: #000;
-display: flex;
-justify-content: center;
-align-items: center;
-position: relative;
+  scroll-snap-align: start;
+  min-height: 100vh; /* not height: 100% */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #000;
+  position: relative;
 }
+
 .reel-inner {
 width: 100%;
 height: 100%;
@@ -202,39 +203,41 @@ animation: fadePop 2.5s forwards;
 pointer-events: none;
 z-index: 2;
 }
+   #reelWrapper {
+  display: flex;
+  flex-direction: column;
+}
 @keyframes fadePop {
 0% { opacity: 0; transform: translateX(-50%) translateY(10px); }
 20% { opacity: 1; }
 100% { opacity: 0; transform: translateX(-50%) translateY(-20px); }
 }
    @media (max-width: 768px) {
-  html, body {
+html, body {
     height: auto;
     overflow-y: auto;
   }
 
-  .layout-wrapper {
+    .layout-wrapper {
     flex-direction: column;
     align-items: center;
     margin: 0;
     min-height: 100vh;
   }
 
-  #live-stats {
+ #live-stats {
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
     width: 100%;
-    padding: 10px 6px;
     background-color: #1a1a1a;
+    padding: 10px 6px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(5, auto);
-    gap: 4px;
     font-size: 0.75rem;
     text-align: center;
-    border-radius: 0;
     z-index: 1000;
   }
 
@@ -249,7 +252,6 @@ z-index: 2;
   }
 
   .content-wrapper {
-    padding-top: 0;
     padding-bottom: 80px;
     flex: 1;
     overflow-y: auto;
@@ -291,9 +293,9 @@ z-index: 2;
 </div>
 
 <div class="layout-wrapper">
-   <div style="height: 130px;"></div>
 <div id="app-frame">
 <div class="content-wrapper">
+   <div style="height: 130px;"></div>
   <div id="reelWrapper"></div>
 </div>
 
@@ -502,7 +504,7 @@ document.addEventListener("DOMContentLoaded", () => {
   loadInitialReels();
   trackVisibleReels();
   lucide.createIcons();
-}, 300);
+}, 200);
 });
 
 
