--- a/reels.html
+++ b/reels.html
@@ -280,7 +280,11 @@ z-index: 2;
 </div>
 
 <div id="app-frame">
-<div class="content-wrapper" id="reelWrapper">
+<div class="content-wrapper">
+  <div style="height: 130px;"></div> <!-- Spacer so reels don't get hidden by stats -->
+  <div id="reelWrapper"></div>
+</div>
+
 </div> <!-- closes .content-wrapper -->
 
 <div class="bottom-nav">
