--- a/reels.html
+++ b/reels.html
@@ -207,6 +207,52 @@ z-index: 2;
 20% { opacity: 1; }
 100% { opacity: 0; transform: translateX(-50%) translateY(-20px); }
 }
+   @media (max-width: 768px) {
+  #live-stats {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    margin: 0;
+    width: 100%;
+    padding: 10px 6px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(5, auto);
+    font-size: 0.75rem;
+    text-align: center;
+    gap: 4px;
+    background-color: #1a1a1a;
+    z-index: 1000;
+    border-radius: 0;
+  }
+
+  .content-wrapper {
+    padding-top: 140px;
+    overflow-y: auto;
+    scroll-snap-type: y mandatory;
+    flex: 1;
+  }
+
+  #app-frame {
+    width: 100%;
+    border-radius: 0;
+    min-height: 100vh;
+  }
+
+  .bottom-nav {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: #1a1a1a;
+    border-top: 1px solid #333;
+    display: flex;
+    justify-content: space-around;
+    padding: 0.5rem 0;
+    z-index: 1000;
+  }
+}
+
 </style>
 <script src="https://unpkg.com/lucide@latest"></script>
 
@@ -228,8 +274,10 @@ z-index: 2;
 
 
 <div id="app-frame">
-<div class="content-wrapper" id="reelWrapper">
-</div> <!-- closes .content-wrapper -->
+  <div class="content-wrapper">
+      <div style="height: 130px;"></div> <!-- pushes reels below fixed stats -->
+      <div id="reelWrapper"></div> <!-- reels injected here -->
+    </div>
 
 <div class="bottom-nav">
 <a href="index.html"><i data-lucide="home"></i></a>
